--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Pressly Embed</title>
+    <title>React Starter</title>
     <!-- include react -->
     <!--script src="./node_modules/react/dist/react-with-addons.js"></script -->
     <meta name="viewport" content="width=device-width" />
