--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     </div>
     <!-- include the webpack-dev-server script so our scripts get reloaded when we make a change -->
     <!-- we'll run the webpack dev server on port 3001, so make sure it is correct -->
-    <script src="http://localhost:3001/webpack-dev-server.js"></script>
+    <script src="/webpack-dev-server.js"></script>
     <!-- include the bundle that contains all our scripts, produced by webpack -->
     <!-- the bundle is served by the webpack-dev-server, so serve it also from localhost:3001 -->
-    <script type="text/javascript" src="http://localhost:3001/assets/bundle.js"></script>
+    <script type="text/javascript" src="/assets/bundle.js"></script>
 </body>
 </html>
